@@ -21,6 +21,9 @@ not yet  BJH  Release 10.50.00
               pnmhisteq: Equalize based on luminosity alone, rather than a
               strange combination of luminosity and HSV value.
 
+              pamflip: Speed up for most images.  Thanks Prophet of the Way
+              <afu@wta.att.ne.jp>.
+
               libppmd/ppmpat: fix wild pointer in ppmd_fill_drawprocp();
               broken in 10.47.
 
